# virt-viewer

./: .gitignore  .hgignore  .mailmap  AUTHORS  AUTHORS.in  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  autobuild.sh  autogen.sh  cfg.mk  configure.ac  git.mk  maint.mk  mingw-virt-viewer.spec.in  mingw32-virt-viewer.spec.in  virt-viewer.spec.in
.tx/: config
data/: Makefile.am  remote-viewer.desktop.in  spice-xpi-client-remote-viewer  virt-viewer-debug.nsis.in  virt-viewer-mime.xml.in  virt-viewer.nsis.in  virt-viewer.wxs.in
icons/: Makefile.am
icons/24x24/: Makefile.am
icons/48x48/: Makefile.am
man/: Makefile.am  remote-viewer.pod  virt-viewer.pod
plugin/: Makefile.am  npshell.c  npunix.c  npupp.h  test.html  virt-viewer-plugin.c  virt-viewer-plugin.h
po/: LINGUAS  POTFILES.in  ar.po  as.po  ast.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  ks.po  lv.po  mai.po  ml.po  (+26 more)
src/: Makefile.am  about.glade  about.xml  auth.c  auth.glade  auth.h  auth.xml  debug-helper.c  display-spice.c  display-spice.h  display-vnc.c  display-vnc.h  display.c  display.h  events.c  events.h  gbinding.c  gbinding.h  main.c  remote-viewer-main.c  remote-viewer.c  remote-viewer.desktop  remote-viewer.h  usleep.c  util.c  util.h  viewer-priv.h  viewer.c  viewer.glade  viewer.h  viewer.xml  virt-glib-compat.c  virt-glib-compat.h  virt-gtk-compat.h  virt-viewer-about.xml  virt-viewer-align.c  virt-viewer-align.h  virt-viewer-app.c  virt-viewer-app.h  virt-viewer-auth.c  (+34 more)
src/view/: autoDrawer.c  autoDrawer.h  drawer.c  drawer.h  ovBox.c  ovBox.h
